--- a/style.css
+++ b/style.css
@@ -3,3 +3,31 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+nav {
+  text-align: center;
+}
+
+img {
+  margin: auto;
+  justify-content: center;
+}
+
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: green;
+}
+
+figcaption {
+  font-size: 1px;
+  text-align: center;
+}
+
+#featured-property p {
+  width 800px;
+}
